package edu.hitsz.observer;

public enum SupplyEvent {
    BOMB,
    FREEZE
}

