package edu.hitsz.observer;

public interface SupplyObserver {
    void update(SupplyEvent event);
}

