package edu.hitsz.prop;

import edu.hitsz.aircraft.HeroAircraft;
import edu.hitsz.observer.SupplyEvent;
import edu.hitsz.observer.SupplyObserver;
import edu.hitsz.observer.SupplySubject;

import java.util.ArrayList;
import java.util.List;

/**
 * 冰冻道具：
 * 本次实验同样只需在控制台输出提示信息，
 * 实际的减速 / 冻结效果将在后续实验中补充。
 */
public class FreezeProp extends AbstractProp implements SupplySubject {

    private final List<SupplyObserver> observers = new ArrayList<>();

    public FreezeProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

    public FreezeProp(int locationX, int locationY, int speedX, int speedY, List<SupplyObserver> observers) {
        super(locationX, locationY, speedX, speedY);
        if (observers != null) {
            this.observers.addAll(observers);
        }
    }

    @Override
    public void activate(HeroAircraft heroAircraft) {
        System.out.println("FreezeSupply active!");
        notifyObservers(SupplyEvent.FREEZE);
    }

    @Override
    public void addObserver(SupplyObserver observer) {
        observers.add(observer);
    }

    @Override
    public void removeObserver(SupplyObserver observer) {
        observers.remove(observer);
    }

    @Override
    public void notifyObservers(SupplyEvent event) {
        for (SupplyObserver observer : observers) {
            observer.update(event);
        }
    }
}
