@startuml
title 观察者模式（炸弹/冰冻道具全局通知）

package "Observer" {
  enum SupplyEvent {
    BOMB
    FREEZE
  }

  interface SupplyObserver {
    + update(event: SupplyEvent): void
  }

  interface SupplySubject {
    + addObserver(observer: SupplyObserver): void
    + removeObserver(observer: SupplyObserver): void
    + notifyObservers(event: SupplyEvent): void
  }
}

package "Game Objects" {
  abstract class AbstractProp {
    + activate(heroAircraft: HeroAircraft): void
  }

  class BombProp <<Publisher>> {
    - observers: List<SupplyObserver>
    + BombProp(observers: List<SupplyObserver>)
    + activate(heroAircraft: HeroAircraft): void
    + addObserver(observer: SupplyObserver): void
    + removeObserver(observer: SupplyObserver): void
    + notifyObservers(event: SupplyEvent): void
  }

  class FreezeProp <<Publisher>> {
    - observers: List<SupplyObserver>
    + FreezeProp(observers: List<SupplyObserver>)
    + activate(heroAircraft: HeroAircraft): void
    + addObserver(observer: SupplyObserver): void
    + removeObserver(observer: SupplyObserver): void
    + notifyObservers(event: SupplyEvent): void
  }

  class EnemyAircraftObserver <<Observer>> {
    - enemyAircrafts: List<AbstractAircraft>
    - game: Game
    + EnemyAircraftObserver(enemyAircrafts: List<AbstractAircraft>, game: Game)
    + update(event: SupplyEvent): void
  }

  class EnemyBulletObserver <<Observer>> {
    - enemyBullets: List<BaseBullet>
    + EnemyBulletObserver(enemyBullets: List<BaseBullet>)
    + update(event: SupplyEvent): void
  }

  class Game
  class PropFactory
  class HeroAircraft
  abstract class AbstractAircraft
  abstract class BaseBullet
}

SupplyObserver <|.. EnemyAircraftObserver
SupplyObserver <|.. EnemyBulletObserver

AbstractProp <|-- BombProp
AbstractProp <|-- FreezeProp
SupplySubject <|.. BombProp
SupplySubject <|.. FreezeProp

BombProp o-- SupplyObserver
FreezeProp o-- SupplyObserver

Game ..> EnemyAircraftObserver : create
Game ..> EnemyBulletObserver : create
PropFactory ..> BombProp : create
PropFactory ..> FreezeProp : create
Game ..> AbstractAircraft
Game ..> BaseBullet

@enduml
